[tool.poetry]
name = "topicx_adopted"
version = "0.0.1"
description = "A fixed version of topicx"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "topicx_adopted"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"